[gd_scene load_steps=5 format=3 uid="uid://d25cnc38vhdvn"]

[ext_resource type="Script" uid="uid://cm6ttotc04vt3" path="res://screens/allies_market/allies_market.gd" id="1_fgbw5"]
[ext_resource type="PackedScene" uid="uid://cn2bbomafg8ko" path="res://screens/allies_market/market_ally_presenter/market_ally_presenter.tscn" id="1_tbd4s"]
[ext_resource type="Resource" uid="uid://dnxrv0styygjo" path="res://data/allies/data/money_provider.tres" id="2_c2b2q"]
[ext_resource type="PackedScene" uid="uid://dlt8q7h5npwt5" path="res://screens/allies_market/ally_details_popup/ally_details_popup.tscn" id="3_popup"]

[node name="AlliesMarket" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fgbw5")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 518.0
offset_top = 120.0
offset_right = 1259.0
offset_bottom = 257.0
theme_override_font_sizes/font_size = 100
text = "ALLIES MARKET"

[node name="MAPContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -99.5
offset_right = 100.5
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarketAllyPresenter" parent="MAPContainer" instance=ExtResource("1_tbd4s")]
layout_mode = 2
ally = ExtResource("2_c2b2q")

[node name="GoBackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 915.0
offset_right = 278.0
offset_bottom = 999.0
theme_override_font_sizes/font_size = 55
text = "Go Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1314.0
offset_top = 688.0
offset_right = 1823.0
offset_bottom = 786.0

[node name="PresentUnlockedAlliesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "present unlocked allies"

[node name="PresentUnlockedAlliesLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="AllyDetailsPopup" parent="." instance=ExtResource("3_popup")]
unique_name_in_owner = true

[connection signal="pressed" from="GoBackBtn" to="." method="_on_go_back_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/PresentUnlockedAlliesButton" to="." method="_on_present_unlocked_allies_button_pressed"]
